--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <main>
-            <div id="hero">              
+            <div id="hero">   
+                <!-- Javascript  -->
             </div>
             <div id="monster">
+                <!-- Javascript  -->
             </div>    
         </main>
         <section id="actions">
